// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-90"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-92"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-100"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-101"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-99"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-108"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-102 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-103"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-104 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-104 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-104 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-104 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-109"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-formText-106"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-110"
                      href="/"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-107 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-106"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-112"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-113"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-111"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-114 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-115"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-116 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-118"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-116 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-120"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-119 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-118"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root ReefNavBar-root-122 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-iconbutton
              aria-label="menu"
              color="primary"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </mock-iconbutton>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-9"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                variant="subtitle1"
              >
                Latest data: May 20, 2020
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5"
      />
    </div>
    <mock-box
      mt="1rem"
    >
      <mock-box>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-baseline"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="h6"
            >
              LOCATION:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="subtitle2"
            >
              LAT: 
              0.000
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="subtitle2"
            >
              LONG: 
              0.000
            </mock-typography>
          </div>
        </div>
      </mock-box>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-125"
          >
            <mock-map
              polygon="[object Object]"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
        >
          <div
            class="ReefDetails-container-125"
          >
            <mock-featuredmedia />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Satellite-card-132"
            style="background-color: rgb(8, 91, 163);"
          >
            <div
              class="MuiCardHeader-root Satellite-header-127"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Satellite-cardTitle-126"
                        variant="h6"
                      >
                        SATELLITE OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="satellite"
                        class="Satellite-titleImage-133"
                        src="satellite.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Satellite-content-134"
            >
              <mock-box
                display="flex"
                flexgrow="1"
                p="1rem"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-128"
                      variant="subtitle2"
                    >
                      Surface Temp
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-129"
                      variant="h2"
                    >
                      26.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-128"
                      variant="subtitle2"
                    >
                      Historical Max
                    </mock-typography>
                    <mock-tooltip
                      title="Historical maximum monthly average over the past 7 years"
                    >
                      <mock-typography
                        classname="Satellite-contentTextValues-129"
                        variant="h2"
                      >
                        23.0 °C
                      </mock-typography>
                    </mock-tooltip>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-128"
                      variant="subtitle2"
                    >
                      Heat Stress
                    </mock-typography>
                    <mock-tooltip
                      title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                    >
                      <mock-typography
                        classname="Satellite-contentTextValues-129"
                        variant="h2"
                      >
                        0.1 DHW
                      </mock-typography>
                    </mock-tooltip>
                  </div>
                </div>
              </mock-box>
              <div
                class="MuiGrid-root MuiGrid-container"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(8, 91, 163); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      0
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(12, 157, 165); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      2
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(117, 180, 114); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      4
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(123, 217, 37); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      6
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(193, 229, 34); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      8
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(229, 187, 43); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      10
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(230, 121, 40); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      12
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(232, 79, 46); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      14
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(216, 69, 36); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      16
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 58, 32); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      18
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(185, 41, 68); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      20
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 48, 126); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      25
                    </mock-typography>
                  </mock-box>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Sensor-card-142"
          >
            <div
              class="MuiCardHeader-root Sensor-header-137"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Sensor-cardTitle-136"
                        variant="h6"
                      >
                        SENSOR OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="buoy"
                        class="Sensor-titleImage-143"
                        src="buoy.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Sensor-content-144"
            >
              <mock-box
                display="flex"
                flexgrow="1"
                p="1rem"
                style="position: relative;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-grid-xs-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-138"
                      variant="subtitle2"
                    >
                      Surface temp
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-139"
                      variant="h2"
                    >
                      25.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-138"
                      variant="subtitle2"
                    >
                      Temp at 4m
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-139"
                      variant="h2"
                    >
                      25.0 °C
                    </mock-typography>
                  </div>
                </div>
                <mock-box
                  bottom="0"
                  position="absolute"
                  right="0"
                >
                  <img
                    alt="sensor"
                    src="sensor.svg"
                  />
                </mock-box>
              </mock-box>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Wind-card-146"
          >
            <div
              class="MuiCardHeader-root Wind-header-147"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                    >
                      <mock-typography
                        color="textSecondary"
                        variant="h6"
                      >
                        CORAL BLEACHING ALERT
                      </mock-typography>
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Wind-contentWrapper-148"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <img
                  alt="alert-level"
                  src="alert_nostress.svg"
                />
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
        >
          <mock-card
            classname="Waves-card-155"
          >
            <mock-cardcontent
              classname="Waves-contentWrapper-157"
            >
              <div
                class="MuiGrid-root Waves-content-158 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-149"
                    variant="h6"
                  >
                    WIND
                  </mock-typography>
                  <img
                    alt="wind"
                    class="Waves-titleImages-156"
                    src="wind.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-151"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      SPEED
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-152"
                        color="textSecondary"
                      >
                        9.0
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-153"
                        color="textSecondary"
                        variant="h6"
                      >
                        KM/H
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-151"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
                        class="Waves-arrow-159"
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
                        classname="Waves-contentTextValues-152"
                        color="textSecondary"
                        variant="h3"
                      >
                        180°
                      </mock-typography>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-149"
                    variant="h6"
                  >
                    WAVES
                  </mock-typography>
                  <img
                    alt="waves"
                    class="Waves-titleImages-156"
                    src="waves.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-4"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-151"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      HEIGHT
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-152"
                        color="textSecondary"
                      >
                        5.0
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-153"
                        color="textSecondary"
                        variant="h6"
                      >
                        Μ
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-3"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-151"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      PERIOD
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-152"
                        color="textSecondary"
                      >
                        2
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-153"
                        color="textSecondary"
                        variant="h6"
                      >
                        S
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-151"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
                        class="Waves-arrow-159"
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
                        classname="Waves-contentTextValues-152"
                        color="textSecondary"
                      >
                        180
                        °
                      </mock-typography>
                    </div>
                  </div>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
      <mock-box
        mt="2rem"
      >
        <mock-charts
          dailydata="[object Object]"
          depth="4"
          maxmonthlymean="22"
          temperaturethreshold="23"
        />
        <div
          class="MuiGrid-root Surveys-root-160 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-center"
        >
          <mock-box
            bgcolor="#f5f6f6"
            height="100%"
            position="absolute"
            width="100vw"
            zindex="-1"
          />
          <div
            class="MuiGrid-root Surveys-surveyWrapper-161 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-12"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <mock-typography
                classname="Surveys-title-162"
              >
                Survey History
              </mock-typography>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-typography
                  classname="Surveys-subTitle-163"
                  variant="h6"
                >
                  Survey History:
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiFormControl-root Surveys-formControl-164"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-165 MuiInputBase-formControl MuiInput-formControl"
                  >
                    <div
                      aria-haspopup="listbox"
                      aria-labelledby="survey-history survey-history"
                      class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                      id="survey-history"
                      role="button"
                      tabindex="0"
                    >
                      <mock-typography
                        classname="Surveys-menuItem-166"
                        variant="h6"
                      >
                        All
                      </mock-typography>
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput"
                      name="survey-history"
                      tabindex="-1"
                      value="all"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <mock-menu
                      anchorel="[object HTMLDivElement]"
                      id="menu-survey-history"
                      menulistprops="[object Object]"
                      open="false"
                      paperprops="[object Object]"
                    >
                      <mock-menuitem
                        aria-selected="true"
                        data-value="all"
                        role="option"
                        selected="true"
                      >
                        <mock-typography
                          classname="Surveys-menuItem-166"
                          variant="h6"
                        >
                          All
                        </mock-typography>
                      </mock-menuitem>
                    </mock-menu>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <mock-typography
                  classname="Surveys-subTitle-163"
                  variant="h6"
                >
                  Observation:
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiFormControl-root Surveys-formControl-164"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-165 MuiInputBase-formControl MuiInput-formControl"
                  >
                    <div
                      aria-haspopup="listbox"
                      aria-labelledby="survey-observation survey-observation"
                      class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                      id="survey-observation"
                      role="button"
                      tabindex="0"
                    >
                      <mock-typography
                        classname="Surveys-menuItem-166"
                        variant="h6"
                      >
                        Any
                      </mock-typography>
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput"
                      name="survey-observation"
                      tabindex="-1"
                      value="any"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <mock-menu
                      anchorel="[object HTMLDivElement]"
                      id="menu-survey-observation"
                      menulistprops="[object Object]"
                      open="false"
                      paperprops="[object Object]"
                    >
                      <mock-menuitem
                        aria-selected="true"
                        data-value="any"
                        role="option"
                        selected="true"
                      >
                        <mock-typography
                          classname="Surveys-menuItem-166"
                          variant="h6"
                        >
                          Any
                        </mock-typography>
                      </mock-menuitem>
                    </mock-menu>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-12"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
            />
          </div>
        </div>
      </mock-box>
    </mock-box>
  </div>
  <mock-appbar
    classname="Footer-appBar-121"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-typography
            variant="h4"
          >
            Aqua
          </mock-typography>
          <mock-typography
            style="color: rgb(138, 198, 222);"
            variant="h4"
          >
            link
          </mock-typography>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-no-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-2"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-4"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-12"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-13"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-11"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-20"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-14 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-15"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-16 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-16 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-16 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-16 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-21"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-formText-18"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-22"
                      href="/"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-18"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-24"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-25"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-23"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-26 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-27"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-30"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-28 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-32"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-31 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-30"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="Reef-noData-1"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <mock-typography
            color="primary"
            gutterbottom="true"
            variant="h2"
          >
            No Data Found
          </mock-typography>
        </div>
      </div>
    </div>
  </div>
  <mock-appbar
    classname="Footer-appBar-33"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-typography
            variant="h4"
          >
            Aqua
          </mock-typography>
          <mock-typography
            style="color: rgb(138, 198, 222);"
            variant="h4"
          >
            link
          </mock-typography>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;
